[gd_scene load_steps=10 format=3 uid="uid://2ggl8hw7vq8n"]

[ext_resource type="Script" uid="uid://cpn1isih8n42y" path="res://scenes/GUI/action_menu.gd" id="1_ilauf"]
[ext_resource type="PackedScene" uid="uid://ws1f3jg0wotp" path="res://scenes/GUI/inventory_panel.tscn" id="2_8r605"]
[ext_resource type="Texture2D" uid="uid://bhofondcn84ew" path="res://sprites/UIPanel.png" id="2_38ob5"]
[ext_resource type="Theme" uid="uid://du12ka2217r4x" path="res://fonts/Izayoi_Theme.tres" id="3_e8ygl"]
[ext_resource type="Script" uid="uid://dqnbmfjx7exf0" path="res://scenes/GUI/action_box.gd" id="3_hhurs"]
[ext_resource type="Script" uid="uid://bsj5frkjcqte4" path="res://scenes/GUI/skill_box.gd" id="6_v4nkc"]
[ext_resource type="Script" uid="uid://ct0uvjp5nevg7" path="res://scenes/GUI/ofuda_box.gd" id="7_61ufj"]
[ext_resource type="PackedScene" uid="uid://br3hwrv0dbjeb" path="res://scenes/GUI/textured_label_button.tscn" id="8_4h5ep"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_61ufj"]
color = Color(0.62, 0.62, 0.62, 1)

[node name="ActionMenu" type="PanelContainer" node_paths=PackedStringArray("skillConfirm")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ilauf")
skillConfirm = NodePath("ScreenMargin/ConfirmBackgroundMargin/ConfirmMargin/SkillConfirm")
cursorOffset = Vector2(30, 6)

[node name="Blocker" type="Panel" parent="."]
layout_mode = 2

[node name="ScreenMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 100

[node name="TradePnl" parent="ScreenMargin" instance=ExtResource("2_8r605")]
visible = false
layout_mode = 2
size_flags_vertical = 8
_style = "Trade"

[node name="ActionBackgroundMargin" type="MarginContainer" parent="ScreenMargin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="BackgroundCenter" type="NinePatchRect" parent="ScreenMargin/ActionBackgroundMargin"]
layout_mode = 2
texture = ExtResource("2_38ob5")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ActionMargin" type="MarginContainer" parent="ScreenMargin/ActionBackgroundMargin"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 10

[node name="ActionBox" type="VBoxContainer" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin"]
layout_mode = 2
theme = ExtResource("3_e8ygl")
theme_override_constants/separation = 0
script = ExtResource("3_hhurs")

[node name="TalkBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
text = "Talk"

[node name="SeizeBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
text = "Seize"

[node name="AtkBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../WaitBtn")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../SklBtn")
mouse_filter = 1
theme = ExtResource("3_e8ygl")
action_mode = 0
text = "Attack"

[node name="SklBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../AtkBtn")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ItmBtn")
mouse_filter = 1
theme = ExtResource("3_e8ygl")
action_mode = 0
text = "Skill"

[node name="OpenBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
text = "Open"

[node name="StealBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
text = "Steal"

[node name="OfudaBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../SklBtn")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../TrdBtn")
mouse_filter = 1
text = "Ofuda"

[node name="ItmBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../SklBtn")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../TrdBtn")
mouse_filter = 1
text = "Item"

[node name="TrdBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../ItmBtn")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../WaitBtn")
mouse_filter = 1
text = "Trade"

[node name="WaitBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../TrdBtn")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../AtkBtn")
mouse_filter = 1
theme = ExtResource("3_e8ygl")
action_mode = 0
text = "Wait"

[node name="EndBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../SklBtn")
focus_neighbor_bottom = NodePath("../AtkBtn")
mouse_filter = 1
theme = ExtResource("3_e8ygl")
action_mode = 0
text = "End Round"

[node name="StatBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../SklBtn")
focus_neighbor_bottom = NodePath("../AtkBtn")
mouse_filter = 1
theme = ExtResource("3_e8ygl")
action_mode = 0
text = "Status"

[node name="OpBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../SklBtn")
focus_neighbor_bottom = NodePath("../AtkBtn")
mouse_filter = 1
theme = ExtResource("3_e8ygl")
action_mode = 0
text = "Options"

[node name="SusBtn" type="Button" parent="ScreenMargin/ActionBackgroundMargin/ActionMargin/ActionBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../SklBtn")
focus_neighbor_bottom = NodePath("../AtkBtn")
mouse_filter = 1
theme = ExtResource("3_e8ygl")
action_mode = 0
text = "Suspend"

[node name="SkillBackgroundMargin" type="MarginContainer" parent="ScreenMargin"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="BackgroundCenter" type="NinePatchRect" parent="ScreenMargin/SkillBackgroundMargin"]
layout_mode = 2
texture = ExtResource("2_38ob5")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="SkillMargin" type="MarginContainer" parent="ScreenMargin/SkillBackgroundMargin"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 10

[node name="SkillBox" type="VBoxContainer" parent="ScreenMargin/SkillBackgroundMargin/SkillMargin"]
layout_mode = 2
theme = ExtResource("3_e8ygl")
theme_override_constants/separation = 0
script = ExtResource("6_v4nkc")

[node name="OfudaBackgroundMargin" type="MarginContainer" parent="ScreenMargin"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="BackgroundCenter" type="NinePatchRect" parent="ScreenMargin/OfudaBackgroundMargin"]
layout_mode = 2
texture = ExtResource("2_38ob5")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="OfudaMargin" type="MarginContainer" parent="ScreenMargin/OfudaBackgroundMargin"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 10

[node name="OfudaBox" type="VBoxContainer" parent="ScreenMargin/OfudaBackgroundMargin/OfudaMargin"]
layout_mode = 2
theme = ExtResource("3_e8ygl")
theme_override_constants/separation = 0
script = ExtResource("7_61ufj")

[node name="ConfirmBackgroundMargin" type="MarginContainer" parent="ScreenMargin"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="BackgroundCenter" type="NinePatchRect" parent="ScreenMargin/ConfirmBackgroundMargin"]
layout_mode = 2
texture = ExtResource("2_38ob5")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ConfirmMargin" type="MarginContainer" parent="ScreenMargin/ConfirmBackgroundMargin"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 10

[node name="SkillConfirm" type="Button" parent="ScreenMargin/ConfirmBackgroundMargin/ConfirmMargin"]
layout_mode = 2
text = "Initiate Action"

[node name="SuspendPanel" type="PanelContainer" parent="ScreenMargin"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackgroundCenter" type="NinePatchRect" parent="ScreenMargin/SuspendPanel"]
layout_mode = 2
texture = ExtResource("2_38ob5")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="ScreenMargin/SuspendPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenMargin/SuspendPanel/MarginContainer"]
layout_mode = 2

[node name="SuspendPromptText" type="RichTextLabel" parent="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "Suspend & Exit Game?"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SaveWarningText" type="RichTextLabel" parent="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "Girls are saving, do not close game...."
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HSeparator" type="HSeparator" parent="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_61ufj")

[node name="promptHBox" type="HBoxContainer" parent="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 190
alignment = 1

[node name="SuspendConfirm" parent="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer/promptHBox" instance=ExtResource("8_4h5ep")]
layout_mode = 2
label_text = "Yes"
font_override = 20

[node name="SuspendReject" parent="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer/promptHBox" instance=ExtResource("8_4h5ep")]
layout_mode = 2
label_text = "No"
font_override = 20

[connection signal="pressed" from="ScreenMargin/ConfirmBackgroundMargin/ConfirmMargin/SkillConfirm" to="." method="_on_skill_confirm_pressed"]
[connection signal="button_pressed" from="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer/promptHBox/SuspendConfirm" to="." method="_on_suspend_confirm_button_pressed"]
[connection signal="button_pressed" from="ScreenMargin/SuspendPanel/MarginContainer/VBoxContainer/promptHBox/SuspendReject" to="." method="_on_suspend_reject_button_pressed"]
